--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Node js server</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Node.js Server</h1>
-  <img src="./kit.jpg" alt="kit.jpg">
-  <main>
-    <button>Clink me</button>
-  </main>
-  <script src="app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Node js server</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Node.js Server</h1>
+    <img src="./kit.jpg" alt="kit.jpg" />
+    <main>
+      <button>Clink me</button>
+    </main>
+    <script src="app.js"></script>
+  </body>
 </html>
